exports[`mcfunction argument parser > minecraft:resource_location > Parse \"012\" 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 3
    },
    "path": [
      "012"
    ]
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:resource_location > Parse \"012\" with {\"category\":\"bossbar\"} 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 3
    },
    "path": [
      "012"
    ]
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:resource_location > Parse \"foo:bar\" 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 7
    },
    "namespace": "foo",
    "path": [
      "bar"
    ]
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:resource_location > Parse \"foo:bar\" with {\"category\":\"bossbar\"} 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 7
    },
    "namespace": "foo",
    "path": [
      "bar"
    ]
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:resource_location > Parse \"foo\" 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 3
    },
    "path": [
      "foo"
    ]
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:resource_location > Parse \"foo\" with {\"category\":\"bossbar\"} 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 3
    },
    "path": [
      "foo"
    ]
  },
  "errors": []
}
`;
